# Watcher

./: .gitignore  BUGS.md  Cargo.toml  README.md  TODO.md  \  bug.txt  display.py  go.mod  go.sum  headers.py  install.sh  log.txt  main.go  main.py  op_gg_scraper.py  palyer.json  response.html  summoner.json
.github/workflows/: rust.yml
src/: args.rs  display.rs  main.rs  utils.rs
src/api/: api.rs
src/ui/: app.rs  keys.rs  mod.rs  ui.rs
v1/: BUGS.md  app.go  dashboard.go  data.go  debug.go  player_data.go  search.go  style.go  utils.go
