[package]
name = "Watcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi-to-tui = "3.0.0" 
chrono = "0.4.26"
cli-clipboard = "0.4.0"
crossterm = "0.26.1"
ratatui = "0.21.0"
riven = "2.19.0"
tokio = { version = "1.27.0", features =   ["full", "macros"] }
